fix: channel spacing on search page

--- a/src/ui/scss/component/_button.scss
+++ b/src/ui/scss/component/_button.scss
@@ -72,6 +72,7 @@
 .button--uri-indicator {
   max-width: 100%;
   height: 1.2em;
+  vertical-align: text-top;
   overflow: hidden;
   text-align: left;
   text-overflow: ellipsis;
